Link to website

--- a/README
+++ b/README
@@ -3,6 +3,4 @@ Project Blackout -- for a greener future
 
 A background app that keeps your power consumption in check when you are not at home.
 
-To run: ./blackout
-
-To build documentation, run "make html" inside doc/
+Our website: http://denerosarmy.github.com/blackout/
